# yggdrax

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  _geometry_impl.py  _interactions_impl.py  bounds.py  dense_interactions.py  dtypes.py  geometry.py  grouped_interactions.py  interactions.py  multipole_utils.py  policies.py  pyproject.toml  traversal.py  tree.py  tree_moments.py  types.py
.basedpyright/: baseline.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
bench/: __init__.py
bench/corrfunc/: __init__.py  bin_width_sensitivity.py  parameter_recovery_demo.py  scaling.py  validate_vs_baseline.py
bench/differentiability/: __init__.py  _common.py  autodiff_overhead.py  mac_accuracy.py  nn_rebuild.py  scaling.py
bench/svgd/: __init__.py  bandwidth_learning_experiment.py  convergence_vs_exact.py  scaling.py
docs/: api.rst  backend_contract.md  concepts.md  conf.py  differentiability_model.md  gpu_benchmark_recommended_setup.md  index.md  test_runtime_status.md
examples/: benchmark_tree_jit.ipynb  getting_started.ipynb  kdtree_backend_benchmark.ipynb  kdtree_jaccpot_smoke.py  kdtree_radix_numeric_parity.py  tree_gpu_performance_scaling.ipynb  tree_leaf_visualization.ipynb
examples/differentiable_paper/: fig_autodiff_overhead.ipynb  fig_corrfunc_recovery.ipynb  fig_corrfunc_scaling.ipynb  fig_corrfunc_validation.ipynb  fig_mac_accuracy.ipynb  fig_nn_rebuild.ipynb  fig_scaling.ipynb  fig_svgd_bandwidth_learning.ipynb  fig_svgd_convergence.ipynb  fig_svgd_scaling.ipynb
results/corrfunc/: bin_sensitivity.json  recovery.json  scaling.json  validation.json
results/differentiability/: autodiff_overhead.json  mac_accuracy.json  nn_rebuild.json  scaling.json
results/svgd/: bandwidth_learning.json  bandwidth_learning_d5.json  convergence.json  scaling.json  scaling_d5.json
tests/: conftest.py
tests/applications/: __init__.py  test_corrfunc_gradients.py  test_corrfunc_soft_binning.py  test_corrfunc_vs_baseline.py  test_svgd_gradients.py  test_svgd_toy_targets.py  test_svgd_vs_exact.py
tests/bench/: __init__.py  test_corrfunc_benches_smoke.py  test_differentiability_benches_smoke.py  test_svgd_benches_smoke.py
tests/distributed/: test_classify.py  test_comm.py  test_cross_walk.py  test_import.py  test_let.py  test_local_tree.py  test_local_tree_backends.py  test_partition.py
tests/unit/: backend_fixtures.py  test_adaptive_octree_execution_view.py  test_adaptive_octree_interaction_lists.py  test_backend_conformance.py  test_bounds.py  test_dense_interactions.py  test_fixed_depth_refinement.py  test_generic_tree_class.py  test_geometry_api_wrapper.py  test_gradient_correctness.py  test_grouped_interactions.py  test_interactions_adapter.py  test_interactions_backend_parity.py  test_kd_tree_parity.py  test_kdtree_api.py  test_morton.py  test_multipole_utils.py  test_octree_execution_view.py  test_octree_execution_view_device.py  test_octree_nearfield_tiles.py  test_octree_topology.py  test_octree_uvwx_coverage.py  test_policies.py  test_prepared_artifacts.py  test_quickstart_smoke.py  test_sparse_octree_execution_view.py  test_traversal_policy.py  test_tree.py  test_tree_api_wrapper.py  test_tree_geometry.py  test_tree_interactions.py  test_tree_moments.py  test_two_pass_builder.py
yggdrax/: __init__.py  _geometry_impl.py  _interactions_impl.py  _tree_impl.py  bounds.py  dense_interactions.py  dtypes.py  geometry.py  grouped_interactions.py  interactions.py  kdtree.py  morton.py  multipole_utils.py  octree.py  octree_nearfield_tiles.py  octree_uvwx.py  policies.py  protocols.py  traversal.py  tree.py  tree_moments.py  types.py
yggdrax/applications/: __init__.py
yggdrax/applications/corrfunc/: __init__.py  baselines.py  binning.py  estimator.py  inference_demo.py
yggdrax/applications/svgd/: __init__.py  bandwidth_learning.py  exact.py  kernel.py  sampler.py  targets.py
yggdrax/distributed/: __init__.py  comm.py  cross_walk.py  let.py  local_tree.py  partition.py  sharding.py
