[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yggdrax"
version = "0.0.1"
description = "Tree generation and traversal package for hierarchical solvers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "jax>=0.8.0",
  "jaxlib>=0.4.0",
  "jaxtyping>=0.2.23",
  "beartype>=0.14.0",
]
authors = [{ name = "AstroAI Lab" }]
keywords = ["fmm", "hierarchical", "n-body", "jax", "treecode"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/AstroAI-Lab/yggdrax"
Repository = "https://github.com/AstroAI-Lab/yggdrax"
Issues = "https://github.com/AstroAI-Lab/yggdrax/issues"

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "isort>=5.13.2",
  "pydoclint>=0.6.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  # The basedpyright baseline is sensitive to the jax type-stub version, so the
  # dev/CI toolchain pins jax/jaxlib and basedpyright to keep the baselined
  # type-check reproducible across machines. Runtime installs still allow the
  # broader `jax>=0.8` range declared above. Bump these together and regenerate
  # .basedpyright/baseline.json when moving to a newer jax.
  "jax==0.8.3",
  "jaxlib==0.8.3",
  "basedpyright==1.39.9",
]
docs = [
  "sphinx>=7.0",
  "furo>=2024.1.29",
  "myst-parser>=2.0",
]

[tool.setuptools]
packages = ["yggdrax", "yggdrax.distributed"]

[tool.setuptools.package-dir]
yggdrax = "yggdrax"

[tool.setuptools.package-data]
yggdrax = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = "\\.pyi?$"
exclude = '''
/(
  \.git
 |\.venv
 |build
 |dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pydoclint]
style = "numpy"
# Types live in the (type-checked) signatures and are rendered by Sphinx
# autodoc, so docstrings describe parameters/returns without repeating the
# type hints. Short summary-only docstrings remain allowed.
arg-type-hints-in-docstring = false
check-return-types = false
skip-checking-short-docstrings = true
allow-init-docstring = true

[tool.basedpyright]
# Static type checking for the JAX-first public API. JAX ships no high-quality
# type stubs, so the "unknown-type" family of diagnostics (which fire on almost
# every jnp.* call) is disabled to keep the gate focused on real type errors
# rather than JAX-stub noise. Pre-existing findings are captured in
# basedpyright-baseline.json; the gate enforces "no new type errors" and the
# baseline is burned down incrementally.
include = ["yggdrax"]
exclude = ["**/__pycache__", "**/.ipynb_checkpoints"]
pythonVersion = "3.11"
# Pin the analysis platform so the baseline is identical on dev machines
# (e.g. macOS) and the Linux CI runners.
pythonPlatform = "Linux"
typeCheckingMode = "standard"

# --- JAX has no usable stubs: silence the untyped-value noise ---------------
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportMissingParameterType = false
reportAny = false
reportExplicitAny = false

# --- Keep the high-signal, bug-catching diagnostics as errors ---------------
reportPossiblyUnboundVariable = "error"
reportUnboundVariable = "error"
reportOptionalMemberAccess = "error"
reportSelfClsParameterName = "error"

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
addopts = "-q --strict-markers --cov=yggdrax --cov-report=term-missing --cov-report=xml --cov-fail-under=80"

[tool.coverage.run]
source = ["yggdrax"]
branch = true
# The distributed/ package is multi-GPU (jax.shard_map + collectives) and cannot
# execute under the CPU-only CI runners, so it cannot be covered here; it is
# exercised on real multi-GPU hardware. Exclude it so the coverage gate stays
# meaningful for the CI-testable code.
omit = ["yggdrax/distributed/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
